feat: Introduce Thread Dump and GC Log analysis capabilities, expanding the application's diagnostic scope.